re PR rtl-optimization/17581 (Long long arithmetic fails inside a switch/case statement when compiled with -O2)

PR rtl-optimization/17581
	* cselib.c (cselib_process_insn): The last instruction of a libcall
	block, with the REG_RETVAL note, should be considered in the libcall.
	* gcse.c (do_local_cprop): Allow constants to be propagated outside
	of libcall blocks.
	(adjust_libcall_notes): Use simplify_replace_rtx instead of
	replace_rtx to avoid creating invalid RTL in REG_RETVAL notes.

	* gcc.dg/pr17581-1.c: New test case.

From-SVN: r89895